resolved fdo#51601 do not attempt to compile running formula cell

2fb377c19f8ae38e7ec649af1343bbd64b70a16b introduced compilation of
a formula cell while it is interpreted, ignoring the comment just above why
that does NOT work ...

This removes the portion that is responsible for the crash as a quick fix,
a more sophisticated solution might be needed to make the original
intention work.

Signed-off-by: Petr Mladek <pmladek@suse.cz>
Signed-off-by: Noel Power <nopower@suse.com>
Signed-off-by: Muthu Subramanian K <sumuthu@suse.com>
(cherry picked from commit be67632e9eb298af8a5582c0e06cad9218fa5b71)